chore: added ability to view synchronized organizations
created a widget to select an organization from an autocomplete bar or a
tree widget

updated account management to use organizations instead of bureau

--- a/uasdm-ui/src/app/admin/component/organization-sync/organization-sync.component.html
+++ b/uasdm-ui/src/app/admin/component/organization-sync/organization-sync.component.html
@@ -10,7 +10,7 @@
 
     <div *ngIf="sync != null" class="modal-body">
       <div class="modal-title-container">
-        <h3>GeoPrism Registry Synchronization Profile</h3>
+        <h3>Organization Synchronization Profile</h3>
       </div>
 
       <form #ngForm="ngForm">
