--- a/uasdm-ui/src/app/admin/component/account/account.component.html
+++ b/uasdm-ui/src/app/admin/component/account/account.component.html
@@ -39,16 +39,16 @@
         <localize key="account.email"></localize>
       </label>
       <input type="email" [(ngModel)]="account.user.email" name="email" #aemail="ngModel" required email>
-      <div *ngIf="aemail.errors?.email && account.user.email && account.user.email.length > 0" class="inline-error-message">
+      <div *ngIf="aemail.errors?.email && account.user.email && account.user.email.length > 0"
+        class="inline-error-message">
         <localize key="account.email.validation"></localize>
       </div>
     </div>
     <div class="form-group">
-      <label>Bureau</label>
-      <select [(ngModel)]="account.user.bureau" name="bureau">
-        <option></option>
-        <option *ngFor="let option of account.bureaus" [value]="option.value">{{option.label}}</option>
-      </select>
+      <label>Organization</label>
+      <organization-field 
+        name="organization" [(value)]="account.user.organization" [disabled]="false">
+      </organization-field>
     </div>
     <div class="form-group">
       <label>Extra Information</label>
@@ -64,20 +64,23 @@
       <label>
         <localize key="account.username"></localize>
       </label>
-      <input type="text" [disabled]="!account.user.newInstance && account.user.username === 'admin'" [(ngModel)]="account.user.username" name="username" required>
+      <input type="text" [disabled]="!account.user.newInstance && account.user.username === 'admin'"
+        [(ngModel)]="account.user.username" name="username" required>
     </div>
     <div *ngIf="!account.user.newInstance" class="form-group">
-      <boolean-field [(value)]="account.changePassword" [label]="'account.changePassword' | localize"></boolean-field>    
+      <boolean-field [(value)]="account.changePassword" [label]="'account.changePassword' | localize"></boolean-field>
     </div>
     <div *ngIf="account.changePassword || account.user.newInstance">
       <div class="form-group">
         <label>
           <localize key="account.password"></localize>
         </label>
-        <input type="password" [(ngModel)]="account.user.password" name="password" #password="ngModel" required minlength="14" maxlength="50" passwordValidator>
+        <input type="password" [(ngModel)]="account.user.password" name="password" #password="ngModel" required
+          minlength="14" maxlength="50" passwordValidator>
         <password-strength-bar [passwordToCheck]="account.user.password"></password-strength-bar>
         <div *ngIf="password.errors?.passwordStrength" class="inline-error-message">
-          The password must be at least 14 characters in length and must contain at least: Two uppercase letters [A-Z], two lowercase letters [a-z], two digits [0-9], and two special characters [e.g.: !@#$*&]
+          The password must be at least 14 characters in length and must contain at least: Two uppercase letters [A-Z],
+          two lowercase letters [a-z], two digits [0-9], and two special characters [e.g.: !@#$*&]
         </div>
       </div>
       <div class="form-group">
