chore: update to set organization on site creation instead of bureau

--- a/uasdm-ui/src/app/shared/component/organization-field/organization-field.component.html
+++ b/uasdm-ui/src/app/shared/component/organization-field/organization-field.component.html
@@ -34,6 +34,7 @@
     [ngClass]="{'inline-loading':loading}" [typeaheadOptionsLimit]="7"
     [typeaheadItemTemplate]="customItemTemplate" [typeaheadMinLength]="0" [typeaheadWaitMs]="300"
     [container]="container"
+    [required]="required"
     >
 
   <span class="input-group-addon clickable addon-alert" (click)="onViewTree()">
