--- a/uasdm-ui/src/app/admin/component/account/accounts.component.html
+++ b/uasdm-ui/src/app/admin/component/account/accounts.component.html
@@ -12,7 +12,7 @@
             Manage Accounts
 <!--             <localize key="accounts.title"></localize> -->
         </h3>
-        <div class="row">
+        <div *ngIf="!requireKeycloakLogin" class="row">
             <div class="col-md-12">
                 <button (click)="inviteUsers()" class="btn btn-primary pull-right" style="margin:10px 0;">Invite User</button>
             </div>
