chore(products): url link for public collections (refs #294)

--- a/uasdm-ui/src/app/site/component/product-panel/product-panel.component.html
+++ b/uasdm-ui/src/app/site/component/product-panel/product-panel.component.html
@@ -85,8 +85,8 @@
                                     title="Deletes the product and all associated data and public map services.">Delete</a>
                             </li>
                             <li *ngIf="product.published" style="padding: 3px 0 3px 0;">
-                                <a (click)="clipboardPublicStacUrl(product)" type="button">
-							      <span [id]="product.id + '-PublicStacUrl'" class="fa fa-link" style="margin:0;"
+                                <a (click)="clipboardPublicStacUrl(product, clipboardPopover)" type="button">
+							      <span [id]="'PublicStacUrl-' + product.id" class="fa fa-link" style="margin:0;"
 							      	[popover]="'Copied to clipboard!'" triggers="" #clipboardPopover="bs-popover" placement="top"></span> 
 							    </a>
                                 <!-- 
