--- a/uasdm-ui/src/app/shared/component/organization-field/organization-hierarchy-modal.component.html
+++ b/uasdm-ui/src/app/shared/component/organization-field/organization-hierarchy-modal.component.html
@@ -21,7 +21,7 @@
 
 <context-menu #nodeMenu menuClass="top-level" style="z-index: 100000;">
   <ng-template contextMenuItem let-item (execute)="onSelect($event.value)">
-      Select
+    Select
   </ng-template>
 </context-menu>
 
@@ -33,8 +33,11 @@
 
       <div class="row" style="margin-right: 10px;">
         <div class="col-md-12">
-          <tree-root *ngIf="nodes.length > 0" #tree [options]="options" [nodes]="nodes">
-          </tree-root>
+          <div class="tree">
+
+            <tree-root *ngIf="nodes.length > 0" #tree [options]="options" [nodes]="nodes">
+            </tree-root>
+          </div>
         </div>
       </div>
     </div>
