--- a/uasdm-ui/src/styles/styles.scss
+++ b/uasdm-ui/src/styles/styles.scss
@@ -10,6 +10,7 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 @import '~mapbox-gl/dist/mapbox-gl.css';
 @import '~@mapbox/mapbox-gl-draw/dist/mapbox-gl-draw.css';
 
+@import '~@circlon/angular-tree-component/css/angular-tree-component.css';
 @import '@angular/cdk/overlay-prebuilt.css';
 @import './node_modules/@perfectmemory/ngx-contextmenu/src/assets/stylesheets/base.scss';
 
@@ -73,76 +74,6 @@ body {
   right: 7px;
   z-index: 2;
 }
-
-.node-content-wrapper,
-.tree-children {
-  position: relative;
-  font-size: 18px;
-}
-
-.node-content-wrapper::before,
-.tree-children::after {
-  content: "";
-  position: absolute;
-}
-
-.node-content-wrapper::before {
-  border-bottom: 1px solid lightgrey;
-  border-left: 1px solid lightgrey;
-  height: 28px;
-  top: -17px;
-  width: 20px;
-  left: -28px;
-}
-
-.tree-node-level-1>tree-node-wrapper>.node-wrapper>.node-content-wrapper::before {
-  display: none;
-}
-
-.tree-node-leaf>.node-wrapper>.node-content-wrapper::before {
-  width: 25px;
-}
-
-.tree-children::after {
-  border-left: 1px solid lightgrey;
-  height: 100%;
-  top: -15px;
-  left: -15px;
-}
-
-tree-node:last-child>.tree-node>.tree-children::after {
-  border-left: none;
-}
-
-.toggle-children {
-  z-index: 1;
-}
-
-
-
-
-.node-content-wrapper {
-  //background-color: lightgrey;
-}
-
-.node-content-wrapper:hover {
-  background: #f2f2f2;
-}
-
-.node-content-wrapper-focused {
-  background: lightgrey;
-}
-
-
-
-.tree-children {
-  padding-left: 29px !important;
-}
-
-tree-node-expander {
-  display: none !important;
-}
-
 
 .dropdown-menu {
   font-size: 18px;
@@ -832,3 +763,76 @@ ngx-file-drop button {
 .p-link {
   font-size: 14px;
 }
+
+
+// Tree styling
+// .node-content-wrapper,
+// .tree-children {
+//   position: relative;
+//   font-size: 18px;
+// }
+
+// .node-content-wrapper::before,
+// .tree-children::after {
+//   content: "";
+//   position: absolute;
+// }
+
+// .node-content-wrapper::before {
+//   border-bottom: 1px solid lightgrey;
+//   border-left: 1px solid lightgrey;
+//   height: 28px;
+//   top: -17px;
+//   width: 20px;
+//   left: -28px;
+// }
+
+// .tree-node-level-1>tree-node-wrapper>.node-wrapper>.node-content-wrapper::before {
+//   display: none;
+// }
+
+// .tree-node-leaf>.node-wrapper>.node-content-wrapper::before {
+//   width: 25px;
+// }
+
+// .tree-children::after {
+//   border-left: 1px solid lightgrey;
+//   height: 100%;
+//   top: -15px;
+//   left: -15px;
+// }
+
+// tree-node:last-child>.tree-node>.tree-children::after {
+//   border-left: none;
+// }
+
+// .toggle-children {
+//   z-index: 1;
+// }
+
+
+
+
+// .node-content-wrapper {
+//   //background-color: lightgrey;
+// }
+
+// .node-content-wrapper:hover {
+//   background: #f2f2f2;
+// }
+
+// .node-content-wrapper-focused {
+//   background: lightgrey;
+// }
+
+
+
+// .tree-children {
+//   padding-left: 29px !important;
+// }
+
+// tree-node-expander {
+//   display: none !important;
+// }
+
+
