chore: fixed bug with uav and organization

--- a/uasdm-ui/src/app/site/component/metadata-page/metadata-page.component.html
+++ b/uasdm-ui/src/app/site/component/metadata-page/metadata-page.component.html
@@ -223,8 +223,8 @@
                             {{uav.faaNumber}}
                         </div>
                         <div class="form-group">
-                            <label for="sensor.type">Bureau</label>
-                            {{uav.bureau}}
+                            <label for="sensor.organization">Organization</label>
+                            {{uav.organization}}
                         </div>
                     </ng-container>
                 </div>
