feat(tile-service): ability to hit public tile service without logging in

--- a/uasdm-ui/src/app/shared/component/organization-field/organization-field.component.html
+++ b/uasdm-ui/src/app/shared/component/organization-field/organization-field.component.html
@@ -37,7 +37,7 @@
     [required]="required"
     >
 
-  <span class="input-group-addon clickable addon-alert" (click)="onViewTree()">
+  <span class="input-group-addon clickable addon-alert" style="padding: 5px 12px; cursor: pointer;" (click)="onViewTree()">
     <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
   </span>
 </div>
