--- a/uasdm-ui/src/app/site/component/projects.component.html
+++ b/uasdm-ui/src/app/site/component/projects.component.html
@@ -218,8 +218,12 @@
               <div class="row">
                 <div class="col-md-12">
                   <label>Organization</label>
-                  <organization-field name="organization" [(value)]="organization" (valueChange)="onOrganizationChange()">
-                  </organization-field>
+                  <form #oForm="ngForm">
+                    <organization-field name="organization" [(value)]="organization"
+                      (valueChange)="onOrganizationChange()">
+                    </organization-field>
+                  </form>
+
                 </div>
               </div>
               <div class="row" *ngIf="syncs != null && syncs.length > 0">
@@ -273,8 +277,7 @@
 
 
             <div id="hierarchy-tree-container"
-              class="location-management-widget-section location-management-list-container"
-              [style]="(current != null && current.type === 0) ?  
+              class="location-management-widget-section location-management-list-container" [style]="(current != null && current.type === 0) ?  
                 'height: calc(100vh - 257px);overflow-y: auto;overflow-x:hidden;' :
                 (syncs.length === 0 ? 'height: calc(100vh - 325px);overflow-y: auto;overflow-x:hidden;' :
                 'height: calc(100vh - 390px);overflow-y: auto;overflow-x:hidden;')">
