chore(analytics): laying some foundation

--- a/uasdm-ui/src/app/admin/component/system/system-configuration.component.html
+++ b/uasdm-ui/src/app/admin/component/system/system-configuration.component.html
@@ -11,6 +11,8 @@
     <h2>System Configuration</h2>
     
     <accounts></accounts>
+    
+    <analytics *ngIf="admin"></analytics>
 
     <system-logos></system-logos>
 
