--- a/uasdm-ui/src/app/admin/component/analytics/analytics.component.html
+++ b/uasdm-ui/src/app/admin/component/analytics/analytics.component.html
@@ -7,6 +7,11 @@
 
 <h3>Analytics</h3>
 
+<div class="col-sm-12">
+  <label>Since Date</label>
+  <input type="date" [(ngModel)]="date" name="sinceDate" class="form-control">
+</div>
+
 <button (click)="generate()" class="btn btn-primary" style="margin:10px 0;">Generate</button>
 
 </div>
