chore: support for labeled property graph tile cache

--- a/uasdm-ui/src/app/admin/component/labeled-property-graph-sync/labeled-property-graph-sync.component.html
+++ b/uasdm-ui/src/app/admin/component/labeled-property-graph-sync/labeled-property-graph-sync.component.html
@@ -83,7 +83,9 @@
   <button type="submit" class="btn btn-primary" (click)="handleOnEdit()">Edit</button>
 -->
           <button type="submit" class="btn btn-secondary" (click)="handleOnCheckVersion()">Check for new version</button>
+          <button type="submit" class="btn btn-info" (click)="handleCreateTiles()">Create tiles</button>
           <button type="submit" class="btn btn-primary" (click)="handleOnSynchronize()">Synchronize from server</button>
+
         </div>
       </form>
     </div>
