--- a/uasdm-ui/src/app/site/component/projects.component.html
+++ b/uasdm-ui/src/app/site/component/projects.component.html
@@ -214,7 +214,7 @@
           <div class="col-md-12">
 
             <!-- IF at Site level -->
-            <ng-container *ngIf="current == null || current.type === 1">
+            <ng-container *ngIf="current == null || current.type !== 0">
               <div class="row">
                 <div class="col-md-12">
                   <label>Organization</label>
@@ -285,7 +285,7 @@
 
               <div class="row" style="margin-left: 10px;">
                 <div class="col-md-12">
-                  <div class="row" *ngIf="current != null" style="margin-right: 10px;">
+                  <div class="row" *ngIf="current != null && current.type !== 2" style="margin-right: 10px;">
                     <div class="col-md-12">
 
                       <h3 *ngIf="current.type === 1">
@@ -322,7 +322,7 @@
                         </tab>
                       </tabset>
 
-                      <tabset *ngIf="current.type !== 1" class="nav-full-width">
+                      <tabset *ngIf="current.type === 0" class="nav-full-width">
                         <tab [heading]="current.metadata.childLabel">
                           <ng-container [ngTemplateOutlet]="sites">
                           </ng-container>
@@ -336,7 +336,7 @@
                     </div>
                   </div>
 
-                  <ng-container *ngIf="current == null">
+                  <ng-container *ngIf="current == null || current.type === 2">
                     <ng-container [ngTemplateOutlet]="locations"
                       *ngIf="hierarchy.oid != null && hierarchy.oid.length > 0">
                     </ng-container>
@@ -364,7 +364,7 @@
               <button (click)="handleCreateCollection()" class="btn btn-primary">Create Collection</button>
             </div>
           </div>
-          <div class="row" *ngIf="current == null || current.type === 1" style="background:white;">
+          <div class="row" *ngIf="current == null || current.type !== 0" style="background:white;">
             <div class="col-md-12" style="text-align: center;padding: 10px;border-top: 1px solid lightgrey;">
               <button (click)="handleCreate(null,null)" class="btn btn-primary">Add new site</button>
             </div>
