--- a/uasdm-ui/src/app/site/component/report/reports.component.html
+++ b/uasdm-ui/src/app/site/component/report/reports.component.html
@@ -2,7 +2,7 @@
 	<uasdm-header></uasdm-header>
 	
 	<div style="padding-left:10px;">
-		<error-report *ngIf="admin"></error-report>
+		<!-- <error-report *ngIf="admin"></error-report> -->
 	
 		<div id="app-container" class="container-fluid">
 			<h2>Report</h2>
