chore(analytics): change a label

--- a/uasdm-ui/src/app/site/component/processing-report/processing-report.component.html
+++ b/uasdm-ui/src/app/site/component/processing-report/processing-report.component.html
@@ -5,7 +5,9 @@
 -->
 <div >
 
-<h2>System Error Report</h2>
+<h2>Processing Quality Report</h2>
+
+<!-- =COUNTIF(E1:E517, "Complete") / 516 -->
 
 <div class="col-sm-12">
   <label>Since Date</label>
