fix(processing): output file name prefix configuration option does nothing (refs #317)

--- a/uasdm-ui/src/app/site/component/modal/odmrun-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/odmrun-modal.component.html
@@ -61,8 +61,8 @@
     	</div>
 	    <div class="panel-body" style="padding:10px;">
 	        <div class="form-group">
-	            <label for="outFileName">Output Product Name Prefix</label>
-	            <input [(ngModel)]="config.outFileName" name="outFileName" type="input" class="form-control"
+	            <label for="outFileNamePrefix">Output Product Name Prefix</label>
+	            <input [(ngModel)]="config.outFileNamePrefix" name="outFileNamePrefix" type="input" class="form-control"
 	                placeholder="Output product name prefix..." disabled />
 	        </div>
 	
