--- a/uasdm-ui/src/app/site/component/upload.component.html
+++ b/uasdm-ui/src/app/site/component/upload.component.html
@@ -127,8 +127,8 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="outFileName">Output Product Name Prefix</label>
-                        <input [(ngModel)]="values.outFileName" name="outFileName" type="input" class="form-control"
+                        <label for="outFileNamePrefix">Output Product Name Prefix</label>
+                        <input [(ngModel)]="values.outFileNamePrefix" name="outFileNamePrefix" type="input" class="form-control"
                             placeholder="Output product name prefix..." />
                     </div>
                     <div class="form-group">
