--- a/uasdm-ui/src/app/site/component/modal/run-ortho-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/run-ortho-modal.component.html
@@ -22,8 +22,8 @@
         <div [collapse]="isAdvancedSettingsCollapsed" [isAnimated]="true" style="padding:10px;">
             <div style="padding:10px;">
 		        <div class="form-group">
-		            <label for="outFileName">Output Product Name Prefix</label>
-		            <input [(ngModel)]="config.outFileName" name="outFileName" type="input" class="form-control"
+		            <label for="outFileNamePrefix">Output Product Name Prefix</label>
+		            <input [(ngModel)]="config.outFileNamePrefix" name="outFileNamePrefix" type="input" class="form-control"
 		                placeholder="Output product name prefix..." />
 		        </div>
 		
